# dep-tools

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  poetry.toml  py-modindex.html  pyproject.toml  requirements.in  requirements.txt  search.html  searchindex.js  wofs_sld.xml
.doctrees/: environment.pickle  index.doctree
_modules/: index.html
_sources/: index.rst.txt
api/: dep_tools.aws.html  dep_tools.exceptions.html  dep_tools.grids.html  dep_tools.html  dep_tools.landsat_utils.html  dep_tools.loaders.html  dep_tools.namers.html  dep_tools.parsers.html  dep_tools.processors.html  dep_tools.s2_utils.html  dep_tools.searchers.html  dep_tools.stac_utils.html  dep_tools.task.html  dep_tools.utils.html  dep_tools.writers.html  modules.html
dep_tools/: Processor.py  Processor2.py  args.py  aws.py  azure.py  exceptions.py  grids.py  landsat_utils.py  loaders.py  loaders2.py  log_utils.py  namers.py  parsers.py  pathrows.txt  processors.py  runner.py  s2_utils.py  searchers.py  sld.py  stac_utils.py  task.py  tiling.py  utils.py  writers.py  writers2.py
docs/: aws.rst  conf.py  grids.rst  index.rst  requirements.txt
prep/: aoi.py  aoi_raster.sh  pathrows.py  s2_tiles.py
tests/: conftest.py  features_on_either_side.geojson  test_OdcLoader.py  test_antimeridian_fixes.py  test_aws.py  test_copy_stac_properties.py  test_dswriter.py  test_fix_winding.py  test_get_stac_item.py  test_grid.py  test_landsat_general.py  test_landsat_mspc_stac_api.py  test_landsat_mspc_stac_search_fixes.py  test_loaders.py  test_namers.py  test_parsers.py  (+2 more)
(+60 files in other folders)
