[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
license = {file = "LICENSE"}
name = "dep-tools"
requires-python = ">=3.10"
version = "0.4.0"

[tool.setuptools]
packages = ["dep_tools"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
