[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
license = {file = "LICENSE"}
name = "dep-tools"
requires-python = ">=3.10"
version = "0.2.0"

[tool.setuptools]
packages = ["dep_tools"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# Include the file dep_tools/pathrows.txt in the package
[tool.setuptools.package-data]
dep_tools = ["pathrows.txt"]
