[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies", "optional-dependencies"]
license = {file = "LICENSE"}
name = "dep-tools"
requires-python = ">=3.10"
version = "0.5.4"

[tool.setuptools]
packages = ["dep_tools"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies.docs]
file = ["docs/requirements.txt"]

# Include the file dep_tools/pathrows.txt in the package
[tool.setuptools.package-data]
dep_tools = ["pathrows.txt"]
